--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.2",
