--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tinymce/tinymce-react": "^5.0.1",
+    "@tiptap/extension-underline": "^2.3.1",
     "@uploadthing/react": "^6.5.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -34,7 +36,6 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
